--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 node_modules
+C:\Users\E5 2620 12 CORES\Desktop\projetos\ROCKETSEAT\ignite\reactjs\desafio-02-componentizando-a-aplicacao\.gitignore
+C:\Users\E5 2620 12 CORES\Desktop\projetos\ROCKETSEAT\ignite\reactjs\desafio-02-componentizando-a-aplicacao\CUsersCUsersE5262012CORESAppDataRoamingnpm-cache
