--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 node_modules
+CUsersCUsersE5262012CORESAppDataRoamingnpm-cache
+CUsersCUsersE5262012CORESAppDataRoamingnpm-cache\node-sass\7.0.0\linux-x64-93_binding.node
